[package]
name = "yama_rcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
pest = "2.4"
pest_derive = "2.4"